# rust-monitor

./: .gitignore  Cargo.toml  README.md  env.example.json  sites.example.json
src/: discord.rs  main.rs  monitor.rs
src/monitor/sites/: bol.rs  marktplaats.rs  mod.rs  nike.rs  not_text.rs  nvidia.rs  processing.rs  shopify_variant.rs
