[package]
name = "monitor"
version = "0.1.0"
authors = ["Terry Haire <terry.wilson.h@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.1", features = ["blocking", "json", "socks"] }
select = "0.4.3"
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.45"
rand = "0.7.3"
chrono = "0.4"
